# cems

./: .todo  main.py  requirements.txt  setup.cfg
eventerx/: __init__.py  config.py  forms.py  models.py  routes.py  utils.py
eventerx.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
eventerx/files/: cities.json  roles.json  task_states.json
eventerx/static/css/: homepage.css  homepage.css.map  homepage.min.css  homepage.min.css.map  login.css  login.css.map  login.min.css  login.min.css.map  main.css  main.css.map  main.min.css  main.min.css.map  register.css  register.css.map  register.min.css  register.min.css.map  tasks.css  tasks.css.map  tasks.min.css  tasks.min.css.map
eventerx/static/js/: main.js
eventerx/static/scss/: _base.scss  _grid.scss  _variables.scss  main.scss
eventerx/static/scss/pages/: homepage.scss  login.scss  register.scss  tasks.scss
eventerx/templates/eventerx/: forms_layout.html  layout.html
eventerx/templates/eventerx/pages/: add_event.html  add_staff.html  add_student.html  admin_homepage.html  calendar.html  edite_event.html  event_detail.html  events.html  forms.html  homepage.html  login.html  profile.html  register_school.html  settings.html  staff.html  staff_detail.html  students.html  tasks.html  teams.html
eventerx/templates/eventerx/sections/: sidenav.html  top_panel.html
tests/: client_ficture.py  test_eventerx.py
