[metadata]
name = eventerx
version = 1.0.0
url = 
license = MIT
maintainer = Pallets
maintainer_email = gaitanfeutse@gmail.com
description = BTech 2022 Project
long_description = 
long_description_content_type = 

[options]
packages = find:
include_package_data = true
install_requires = 
    alembic
    autopep8
    bcrypt
    cffi
    click
    colorama
    dnspython
    email-validator 
    Flask
    Flask-Bcrypt 
    Flask-Login
    Flask-Migrate
    Flask-SQLAlchemy
    Flask-WTF 
    greenlet
    idna 
    itsdangerous
    Jinja2 
    Mako 
    MarkupSafe 
    mysql 
    mysqlclient 
    pycodestyle 
    pycparser
    python-dateutil
    python-editor 
    selenium 
    six 
    SQLAlchemy 
    toml 
    urllib3
    Werkzeug
    WTForm 
    WTForms


[options.extras_require]
test =
    pytest

[tool:pytest]
testpaths = tests

[coverage:run]
branch = True
source = eventerx